--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^6.4.2",
     "save": "^2.3.2",
     "sequelize": "^4.35.2",
+    "stripe": "^6.0.0",
     "vue-session": "^1.0.0"
   },
   "devDependencies": {
