--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nunjucks": "^3.1.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "pg": "^6.4.2",
     "save": "^2.3.2",
     "sequelize": "^4.35.2",
