--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "moment": "^2.22.1",
+    "node-cron": "^1.2.1",
     "nodemailer": "^4.6.5",
     "nodemon": "^1.17.2",
     "nunjucks": "^3.1.2",
