--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed-videos": "npm run build && npm run babel-node -- ./script/seed-videos.js",
     "seed-users": "npm run build && npm run babel-node -- ./script/seed-users.js",
     "modify-users": "npm run build && npm run babel-node -- ./script/modify-users.js",
+    "modify-stripe": "npm run build && npm run babel-node -- ./script/modify-stripe.js",
     "destroy-all-users": "npm run build && npm run babel-node -- ./script/destroy-all-users.js"
   },
   "author": "",
